completed the checkpoint

--- a/index.html
+++ b/index.html
@@ -3,9 +3,58 @@
   <head>
     <meta charset="utf-8">
     <title>Airlines!!</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-md">
+          <h1 class =col-8>PUERTO RICO AIRLINES</h1>
+                 <div class="nav-btn1">
+                   <button type="button" class="nbtn btn-md">HOME</button>
+                   <button type="button" class="nbtn btn-md">FLIGHTS</button>
+                   <button type="button" class="nbtn btn-md">SUPPORT</button>
+                   <button type="button" class="nbtn btn-md">LOGIN</button>
+                 </div>
+        </nav>
+      </header>
+        <div class="container">
+            <div class="row">
+              <div class="card-deck">
+                <div class="card">
+                  <div class="card-body shadow">
+                    <h4 class="card-title">Flights</h4>
+                    <p class="card-text">Come check out our sweet flights! Direct flights available daily!</p>
+                      <button type="button" class="btn btn-md-card card-btn2">Lets go</button>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body shadow">
+                    <h4 class="card-title">Group Trips</h4>
+                    <p class="card-text">We offer great group rates! For families with 4 members to huge gatherings</p>
+                    <button type="button" class="btn  btn-md1 card-btn2">Group Rates</button>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body shadow">
+                    <h4 class="card-title">Discount Flights</h4>
+                    <p class="card-text">Disocunt Flights availble for individuals! Single chair filler tickets for low rates!</p>
+                    <button type="button" class="btn  btn-md1 card-btn2">Jump in</button>
+                  </div>
+                </div>
+              </div>
 
+              <div class="card">
+                <div class="card-body about shadow">
+                  <h4 class="card-title">About Us</h4>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
+                    ostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proidentsunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <button type="button" class="btn  btn-md1 card-btn3">Learn More</button>
+                </div>
+              </div>
+
+          </div>
+
+        </div>
   </body>
 </html>
